Adding flutter to project with update files -update user login and register fields. -add account type patient/doctor in register screen.

--- a/flutter/web/manifest.json
+++ b/flutter/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "diabetes_management_app",
-    "short_name": "diabetes_management_app",
+    "name": "flutter_",
+    "short_name": "flutter_",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
