--- a/flutter/windows/runner/Runner.rc
+++ b/flutter/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "diabetes_management_app" "\0"
+            VALUE "FileDescription", "flutter_" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "diabetes_management_app" "\0"
+            VALUE "InternalName", "flutter_" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "diabetes_management_app.exe" "\0"
-            VALUE "ProductName", "diabetes_management_app" "\0"
+            VALUE "OriginalFilename", "flutter_.exe" "\0"
+            VALUE "ProductName", "flutter_" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
