--- a/flutter/android/app/src/main/AndroidManifest.xml
+++ b/flutter/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="diabetes_management_app"
+        android:label="flutter_"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
