--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.6
+  app_links: ^2.2.0
   shared_preferences: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,7 +60,6 @@ flutter:
 
   assets:
     - assets/images/
-
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
