--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -30,16 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # حزم خارجية
   http: ^0.13.6
   app_links: ^2.2.0
   shared_preferences: ^2.2.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   url_launcher: ^6.3.1
-  intl: ^0.20.2
+  intl: ^0.19.0  # تم التعديل إلى إصدار موجود
 
+  # حزم من الـ SDK
+  flutter_localizations:
+    sdk: flutter
+  cupertino_icons: ^1.0.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
