--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.2.0
   url_launcher: ^6.3.1
   intl: ^0.19.0  # تم التعديل إلى إصدار موجود
+  flutter_local_notifications: ^17.2.1
 
   # حزم من الـ SDK
   flutter_localizations:
