--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   logger: ^2.0.2+1
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
