--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   logger: ^2.0.2+1
   flutter_secure_storage: ^9.2.2
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
