add flutter_typeahead package for autocomplete functionality

--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   logger: ^2.0.2+1
   flutter_secure_storage: ^9.2.2
   provider: ^6.1.4
+  flutter_typeahead: ^4.8.0
 
 dev_dependencies:
   flutter_test:
