Add serial number column and hide table until search in AlternativeMedicationsScreen

--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -23,8 +23,13 @@ dependencies:
   logger: ^2.0.2+1
   flutter_secure_storage: ^9.2.2
   provider: ^6.1.4
-  flutter_typeahead: ^4.8.0
+  flutter_typeahead: ^5.2.0
 
+
+
+dependency_overrides:
+  flutter_keyboard_visibility: ^6.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -40,4 +45,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-   
