--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,9 @@ cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.3.2
 cryptography==43.0.1
+cycler==0.12.1
 distlib==0.3.8
 dj-rest-auth==7.0.1
 Django==5.1.5
@@ -17,9 +19,12 @@ django-environ==0.12.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+experta @ git+https://github.com/nilp0inter/experta.git@c6d5834b123861f5ae09e7d07027dc98bec58741
 filelock==3.15.4
 Flask==3.0.3
 flatbuffers==24.3.25
+fonttools==4.57.0
+frozendict==2.4.6
 fsspec==2024.9.0
 gast==0.6.0
 google-pasta==0.2.0
@@ -30,10 +35,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 keras==3.5.0
+kiwisolver==1.4.8
 libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.10.1
 mdurl==0.1.2
 ml-dtypes==0.4.1
 mpmath==1.3.0
@@ -44,17 +51,25 @@ numpy==1.26.4
 opt_einsum==3.4.0
 optree==0.12.1
 packaging==24.1
+pandas==2.2.3
 pillow==10.4.0
 platformdirs==4.2.2
 protobuf==4.25.5
 pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.9.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+pytz==2025.2
 pywin32==309
 regex==2024.9.11
 requests==2.32.3
 rich==13.9.1
+schema==0.6.8
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
 setuptools==75.1.0
 six==1.16.0
 sqlparse==0.5.1
@@ -65,6 +80,7 @@ tensorflow==2.17.0
 tensorflow-intel==2.17.0
 termcolor==2.4.0
 tflearn==0.5.0
+threadpoolctl==3.6.0
 torch==2.4.1
 tqdm==4.66.5
 typing_extensions==4.12.2
