Implement analysis upload feature

--- a/flutter/android/app/src/main/AndroidManifest.xml
+++ b/flutter/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> <!-- للإشعارات بعد إعادة التشغيل -->
     <uses-permission android:name="android.permission.INTERNET"/> <!-- لدعم طلبات HTTP -->
+    <!-- أذونات للوصول إلى الصور -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
 
     <application
         android:label="Diabetes Manager"
