--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   provider: ^6.1.4
   flutter_typeahead: ^5.2.0
   translator: ^1.0.3+1
-
+  image_picker: ^1.1.2 # لاختيار الصور من المعرض
+  permission_handler: ^11.3.1 # لإدارة الأذونات
 
 dependency_overrides:
   flutter_keyboard_visibility: ^6.0.0
