--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   translator: ^1.0.3+1
   image_picker: ^1.1.2 # لاختيار الصور من المعرض
   permission_handler: ^11.3.1 # لإدارة الأذونات
-
+  cached_network_image: ^3.3.1
+  
 dependency_overrides:
   flutter_keyboard_visibility: ^6.0.0
 
