--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   image_picker: ^1.1.2 # لاختيار الصور من المعرض
   permission_handler: ^11.3.1 # لإدارة الأذونات
   cached_network_image: ^3.3.1
+  google_fonts: ^6.2.1
   
+          
 dependency_overrides:
   flutter_keyboard_visibility: ^6.0.0
 
@@ -47,3 +49,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/sounds/medication.wav
