--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   url_launcher: ^6.3.1
   shared_preferences: ^2.2.0
   intl: ^0.19.0
-  flutter_local_notifications: ^17.2.1
+  flutter_local_notifications: ^17.2.2
   timezone: ^0.9.2
   cupertino_icons: ^1.0.8
   flutter_localizations:
@@ -25,8 +25,8 @@ dependencies:
   provider: ^6.1.4
   flutter_typeahead: ^5.2.0
   translator: ^1.0.3+1
-  image_picker: ^1.1.2 # لاختيار الصور من المعرض
-  permission_handler: ^11.3.1 # لإدارة الأذونات
+  image_picker: ^1.1.2 
+  permission_handler: ^11.3.1  
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
   
